force-app/main/default/objects/TechPro__c/fields/Linkedln_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Linkedln_User_ID__c</fullName>
    <label>Linkedln User ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>