force-app/main/default/objects/TechPro__c/fields/Linkedln_User_Pasword__c.field-meta.xml
<CustomField>
    <fullName>Linkedln_User_Pasword__c</fullName>
    <label>Linkedln User Pasword</label>
    <length>50</length>
    <type>Text</type>
</CustomField>