force-app/main/default/objects/TechPro__c/fields/Linkedln_User_Token__c.field-meta.xml
<CustomField>
    <fullName>Linkedln_User_Token__c</fullName>
    <label>Linkedln User Token</label>
    <length>150</length>
    <type>Text</type>
</CustomField>